--- a/AgendaContatos.Domain/.editorconfig
+++ b/AgendaContatos.Domain/.editorconfig
@@ -1,10 +1,13 @@
 ﻿[*.cs]
 
 # CA1303: Do not pass literals as localized parameters
-dotnet_diagnostic.CA1303.severity = silent
+dotnet_diagnostic.CA1303.severity = suggestion
 
 # CA1062: Validate arguments of public methods
-dotnet_diagnostic.CA1062.severity = silent
+dotnet_diagnostic.CA1062.severity = suggestion
 
 # CA1307: Specify StringComparison
 dotnet_diagnostic.CA1307.severity = suggestion
+
+# CA1710: Identifiers should have correct suffix
+dotnet_diagnostic.CA1710.severity = suggestion
