Criando camada de repositorio

--- a/AgendaContatos.Api/appsettings.Development.json
+++ b/AgendaContatos.Api/appsettings.Development.json
@@ -4,6 +4,9 @@
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
+    },
+    "ConnectionString": {
+      "ConnectionMySql": "Server=localhost;Database=AgendaContatos;Uid=app;Pwd=^WG3BMzH6LNZLKk&TTsRhGSfzKTkK8iE"
     }
   }
 }
