--- a/AgendaContatos.Api/AgendaContatos.Api.csproj
+++ b/AgendaContatos.Api/AgendaContatos.Api.csproj
@@ -8,11 +8,12 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="4.1.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.0.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.0.0" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.1.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\AgendaContatos.Domain\AgendaContatos.Domain.csproj" />
-    <ProjectReference Include="..\AgendaContatos.Repository\AgendaContatos.Repository.csproj" />
+    <ProjectReference Include="..\AgendaContatos.Infra\AgendaContatos.Infra.csproj" />
   </ItemGroup>
 
 
